# nexus-langgraph

./: .env.example  .gitignore  Dockerfile  README.md  REPO_STRUCTURE.md  REPO_STRUCTURE_PROPOSAL.md  langgraph.json  pyproject.toml  test_agent_local.py  test_prompt_generation.py
agents/dental/: README.md  __init__.py  agent.py  tools.py
agents/react/: README.md  agent.py
examples/: agent_with_llm_config.py
shared/config/: llm_config.py  nexus_config.py
shared/prompts/: react_prompt.py
shared/tools/: nexus_tools.py
